# nodejs-mobile-bare-prebuilds

./: .gitignore  CONTRIBUTING.md  README.md  build.js  package-lock.json  package.json
.github/: dependabot.yml
.github/actions/assemble-test-project/: action.yml  default-smoke-test.js  module-tests-runner.js  preload.js  wrapper.js
.github/actions/prebuild/: action.yml
.github/workflows/: prebuild-all.yml  prebuild.yml  release.yml  test-android.yml  test-ios.yml  test.yml
test-harness/android/: .gitignore  README.md  run-test.sh  settings.gradle
test-harness/android/app/: build.gradle
test-harness/android/app/src/main/: AndroidManifest.xml
test-harness/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
test-harness/android/app/src/main/java/com/digidem/nodejstest/: TestActivity.java
test-harness/ios/: .gitignore  README.md
test-harness/ios/TestHarness/: AppDelegate.m  NodeRunner.h  NodeRunner.mm  ViewController.h  ViewController.m
test-harness/ios/TestHarness.xcodeproj/: project.pbxproj
test-harness/ios/TestHarness.xcodeproj/xcshareddata/xcschemes/: TestHarness.xcscheme
